--- a/src/main/resources/templates/fragment/User/wiki/sidebar.html
+++ b/src/main/resources/templates/fragment/User/wiki/sidebar.html
@@ -2,8 +2,8 @@
 <div class="col-xs-7 col-sm-3 col-md-3 sidebar sidebar-left sidebar-animate sidebar-md-show" xmlns:th="http://www.w3.org/1999/xhtml">
     <ul class="nav navbar-stacked">
 
-        <li ng-repeat="user in users" ng-click="displayWiki(user)">
-            <a href="#">{{user.firstName}} {{user.lastName}}</a>
+        <li ng-repeat="wiki in wikiOutput" ng-click="displayWikiOutput(wiki)">
+            <a href="#">{{wiki.userDisplay.username}}</a>
         </li>
     </ul>
 </div>
