--- a/src/main/resources/templates/fragment/User/top.html
+++ b/src/main/resources/templates/fragment/User/top.html
@@ -107,8 +107,15 @@
                     </ul>
                 </li>
 
-                <li>
-                    <a class="white-text" th:href="@{/logout}">Logout</a>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle white-text" data-toggle="dropdown">
+                        <th:block th:text="${user.firstName} + ' ' + ${user.lastName}"></th:block>
+                        <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <a data-toggle="modal" th:href="@{/logout}">Logout</a>
+                        </li>
+                    </ul>
                 </li>
             </ul>
         </div>
