--- a/src/main/resources/static/css/stylesheet.css
+++ b/src/main/resources/static/css/stylesheet.css
@@ -155,6 +155,8 @@ body {
     box-shadow: 0 1px .5px rgba(0, 0, 0, .13);
     transition: .2s cubic-bezier(.31, .34, .3, .99);
     margin-bottom: 5px;
+    text-align: justify;
+    word-break: break-all
 }
 
 .sender {
