fix serchbar css.

--- a/src/main/resources/templates/fragment/User/top.html
+++ b/src/main/resources/templates/fragment/User/top.html
@@ -21,7 +21,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav" style="padding-left: 50px">
                 <!-- Search bar and dropdown menu -->
-                <div class="col-xs-12" id="search-bar">
+                <div class="navbar-form navbar-left navbar-search" id="search-bar">
                     <div class="input-group">
                         <div class="input-group-btn search-panel">
                             <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
