--- a/src/main/resources/templates/fragment/User/sidebar.html
+++ b/src/main/resources/templates/fragment/User/sidebar.html
@@ -1,7 +1,6 @@
 <!-- Sidebar -->
 <div class="col-xs-7 col-sm-3 col-md-3 sidebar sidebar-left sidebar-animate sidebar-md-show">
     <ul class="nav navbar-stacked">
-
         <!-- User must choose between Individual or Team -->
         <select class="form-control" ng-model="typemsg" ng-init="typemsg=typemessages[0]"
                 ng-options="t as t.name for t in typemessages"
@@ -15,7 +14,7 @@
             <a href="#" ng-repeat="user in users" ng-click="displayMessages(user)"
                ng-class="(user.userId == currentUserId) ? 'list-group-item active' : 'list-group-item'"
                ng-init="displayFirstMessage(user)">
-                <h5>{{user.firstName}} {{user.lastName}} <span class="label label-success">{{user.username}}</span></h5>
+                <h5>{{user.firstName}} {{user.lastName}} <span class="label label-success" ng-bind="user.username"></span></h5>
             </a>
 
             <a href="#" class="list-group-item list-group-item-warning" ng-if="users.length == 0">No users found!</a>
