Finished Wiki page style

--- a/src/main/resources/static/css/stylesheet.css
+++ b/src/main/resources/static/css/stylesheet.css
@@ -211,3 +211,11 @@ body {
 .list-group-item-warning:hover {
     cursor: default;
 }
+
+.wiki-row {
+    padding-bottom: 30px;
+}
+
+.not-resizable {
+    resize: none;
+}
