--- a/src/main/resources/templates/fragment/User/top.html
+++ b/src/main/resources/templates/fragment/User/top.html
@@ -14,7 +14,7 @@
                 <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
                     class="icon-bar"></span><span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand">Messaging System Website</a>
+            <a class="navbar-brand" th:href="@{/user}">Messaging System Website</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
