--- a/src/main/resources/templates/fragment/User/sidebar.html
+++ b/src/main/resources/templates/fragment/User/sidebar.html
@@ -1,5 +1,5 @@
 <!-- Sidebar -->
-<div class="col-xs-7 col-sm-3 col-md-3 sidebar sidebar-left sidebar-animate sidebar-md-show">
+<div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar">
     <ul class="nav navbar-stacked">
         <!-- User must choose between Individual or Team -->
         <select class="form-control" ng-model="typemsg" ng-init="typemsg=typemessages[0]"
