--- a/src/main/resources/templates/User/index.html
+++ b/src/main/resources/templates/User/index.html
@@ -79,8 +79,7 @@
                                 <div class="form-group">
                                     <label class="btn btn-primary" for="fileUpload">
                                         <span class="glyphicon glyphicon-paperclip" aria-hidden="true"></span>
-                                        <input type="file" name="fileUpload" id="fileUpload"
-                                               style="display: none;">
+                                        <input type="file" name="fileUpload" id="fileUpload">
                                     </label>
                                 </div>
 
@@ -94,8 +93,6 @@
                             </form>
                         </div>
                     </div>
-                    <!--</div>-->
-                    <!--</div>-->
                 </div>
             </div> <!-- end row for sending message to an individual -->
 
@@ -114,16 +111,17 @@
                                     <input style="display: none" id="ttoTeamId" ng-value="currentTeam.teamId"
                                            type="text"
                                            name="toTeamId">
-                                        <textarea class="form-control" rows="1" ng-model="currentMessage" id="tmessage"
-                                                  name="message" style="width: 600px;"></textarea>
+                                        <textarea class="form-control not-resizable" rows="1" cols="60"
+                                                  ng-model="currentMessage" id="tmessage"
+                                                  name="message"></textarea>
                                 </div>
 
-                                    <div class="form-group">
-                                        <label class="btn btn-primary" for="fileUpload">
-                                            <span class="glyphicon glyphicon-paperclip" aria-hidden="true"></span>
-                                            <input type="file" name="teamFileUpload" id="teamFileUpload" style="display: none;">
-                                        </label>
-                                    </div>
+                                <div class="form-group">
+                                    <label class="btn btn-primary" for="teamFileUpload">
+                                        <span class="glyphicon glyphicon-paperclip" aria-hidden="true"></span>
+                                        <input type="file" name="teamFileUpload" id="teamFileUpload">
+                                    </label>
+                                </div>
 
                                 <div class="form-group">
                                     <button type="button" class="btn btn-success"
