--- a/src/main/resources/templates/User/index.html
+++ b/src/main/resources/templates/User/index.html
@@ -47,7 +47,7 @@
                                 <small><span ng-bind="message.prettyTime"></span></small>
                             </h4>
                             <div ng-bind="message.message"></div>
-                            <div ng-if="message.fileName != null">Attached Files: <a
+                            <div ng-if="message.fileName != 'null'">Attached Files: <a
                                     ng-attr-href="/user/download/file/?fileName={{message.fileName}}">{{message.fileName}}</a>
                             </div>
                         </div>
