--- a/src/main/resources/templates/fragment/User/modals.html
+++ b/src/main/resources/templates/fragment/User/modals.html
@@ -28,7 +28,8 @@
                 </select>
 
                 <label class="control-label">Enter Invite Message:</label>
-                <input ng-model="modalMessageInvite" type="text" class="form-control" id="modelMessge" name="modelMessge">
+                <input ng-model="modalMessageInvite" type="text" class="form-control" id="modelMessge"
+                       name="modelMessge">
             </div>
             <div class="modal-footer">
                 <button type="submit" class="btn btn-default" ng-click="sendSearchInvite()">Invite</button>
@@ -237,3 +238,6 @@
         </form>
     </div>
 </div>
+
+<th:block th:replace="fragment/User/uploadAvatarModal">
+</th:block>
