--- a/src/main/resources/templates/fragment/User/top.html
+++ b/src/main/resources/templates/fragment/User/top.html
@@ -104,6 +104,9 @@
                         <li>
                             <a data-toggle="modal" data-target="#searchModal">Search Modal</a>
                         </li>
+                        <li>
+                            <a data-toggle="modal" ng-click="showAvatarModal()">Upload Avatar Picture</a>
+                        </li>
                     </ul>
                 </li>
 
